# IntelBrief-Hormuz-Iran

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  REPO_REVIEW.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
FW_DEV/Proteus1/sovereign-sensor/: CMakeLists.txt  prj.conf
FW_DEV/Proteus1/sovereign-sensor/boards/: nucleo_wb55rg.overlay
FW_DEV/Proteus1/sovereign-sensor/include/: capture.h  protocol.h  sensor_config.h  transport.h
FW_DEV/Proteus1/sovereign-sensor/src/: main.c
FW_DEV/Proteus1/sovereign-sensor/src/capture/: ring_buffer.c  session.c  swing_detect.c
FW_DEV/Proteus1/sovereign-sensor/src/sensors/: environment.c  impact_detect.c  ism330dhcx.c
FW_DEV/Proteus1/sovereign-sensor/src/storage/: flash_store.c
FW_DEV/Proteus1/sovereign-sensor/src/transport/: ble_service.c  protocol.c  usb_serial.c
FW_DEV/Proteus1/sovereign-sensor/tools/: ble_capture_daemon.py  capture_daemon.py  live_monitor.py  serial_reader.py
build_user_Feedback/: CURRENT_FEEDBACK_REPORT.md
hf-proxy/: Dockerfile  app.py  classifier.py  llm_manager.py  pyproject.toml  requirements.txt  swing_store.py
hf-proxy/tests/: test_api.py  test_classifier.py  test_llm_manager.py  test_swing_store.py
launcher/: data_fetch.py
public/: manifest.json  sw.js
sdk/: setup.py  sovereign_client.py
sovereign-lib/: setup.py
src/: App.jsx  DataService.jsx  ErrorBoundary.jsx  LiveFeedTab.jsx  PatternsTab.jsx  ProgressTab.jsx  SettingsTab.jsx  Toasts.jsx  main.jsx  theme.js
tests/: test_api.py
(+18 files in other folders)
